--- a/index.css
+++ b/index.css
@@ -405,3 +405,13 @@ fieldset.enviar {
     justify-content: center;
     border: none;
 }
+#language img {
+    width: 30px !important;
+    margin-right: 10px;
+}
+ul#language {
+    list-style: none;
+    display: flex;
+    align-content: center;
+    justify-content: space-between;
+}
